# metahopt

./: .gitignore  .gitlab-ci.yml  pyproject.toml  setup.cfg
src/metahopt/: examples.py  local_search.py  numeric_search.py  scoring.py  typing.py
tests/: test_metahopt.py
tests/unit_tests/: test_examples.py  test_local_search.py  test_scoring.py
