[metadata]
name = metahopt
author = Alexandre Marty
author_email = alexandre@marty.in
description = Metaheuristics optimization framework
url = https://gitlab.com/alex-marty/metahopt
license = MIT
keywords = optimization metaheuristic computing combinatorial tabu genetic particle swarm algorithm
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.packages.find]
where = src


[options.extras_require]
test =
    pytest
    pytest-mock
    pytest-cov
    # Only for dev
    black
