[metadata]
name = metahopt
version = 0.1.0a1
author = Alexandre Marty
author_email = contact@marty.in
description = Metaheuristics optimization framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/alex-marty/metahopt
license = MIT
keywords = optimization metaheuristic scientific computing combinatorial tabu genetic particle swarm algorithm
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.packages.find]
where = src


[options.extras_require]
test =
    pytest
    pytest-mock
    pytest-cov
    # For linting
    black
    flake8
    mypy


[flake8]
# Settings for compatibility with black
max-line-length = 88
extend-ignore = E203, W503


[mypy]
files = src, tests

[mypy-numpy.*]
ignore_missing_imports = True
